src/objects/Customer_Project_Profile__c.object
<CustomObject>
    <fields>
        <fullName>APIs_in_Use__c</fullName>
        <label>APIs in Use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTTP API</fullName>
                </value>
                <value>
                    <fullName>SDN OGM/SDN RX</fullName>
                </value>
                <value>
                    <fullName>Stored Procedures</fullName>
                </value>
                <value>
                    <fullName>Unmanaged Extensions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>.NET Driver</fullName>
                    <isActive>false</isActive>
                    <label>.NET Driver</label>
                </value>
                <value>
                    <fullName>APOC</fullName>
                    <isActive>false</isActive>
                    <label>APOC</label>
                </value>
                <value>
                    <fullName>Graph Algorithms</fullName>
                    <isActive>false</isActive>
                    <label>Graph Algorithms</label>
                </value>
                <value>
                    <fullName>GraphQL</fullName>
                    <isActive>false</isActive>
                    <label>GraphQL</label>
                </value>
                <value>
                    <fullName>HTTP</fullName>
                    <isActive>false</isActive>
                    <label>HTTP</label>
                </value>
                <value>
                    <fullName>JDBC Driver</fullName>
                    <isActive>false</isActive>
                    <label>JDBC Driver</label>
                </value>
                <value>
                    <fullName>JS Driver</fullName>
                    <isActive>false</isActive>
                    <label>JS Driver</label>
                </value>
                <value>
                    <fullName>Java API</fullName>
                    <isActive>false</isActive>
                    <label>Java API</label>
                </value>
                <value>
                    <fullName>Java Driver</fullName>
                    <isActive>false</isActive>
                    <label>Java Driver</label>
                </value>
                <value>
                    <fullName>OGM</fullName>
                    <isActive>false</isActive>
                    <label>OGM</label>
                </value>
                <value>
                    <fullName>Procedures</fullName>
                    <isActive>false</isActive>
                    <label>Procedures</label>
                </value>
                <value>
                    <fullName>Python Driver</fullName>
                    <isActive>false</isActive>
                    <label>Python Driver</label>
                </value>
                <value>
                    <fullName>SDN</fullName>
                    <isActive>false</isActive>
                    <label>SDN</label>
                </value>
                <value>
                    <fullName>UnEx</fullName>
                    <isActive>false</isActive>
                    <label>UnEx</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Customer_Segment__c</fullName>
        <formula>TEXT(Account_Name__r.Customer_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Global_Territory__c</fullName>
        <formula>Account_Name__r.Global_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Project Profiles</relationshipLabel>
        <relationshipName>Customer_Project_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_US_Territory__c</fullName>
        <formula>Account_Name__r.US_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account US Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_3rd_Party_Technologies__c</fullName>
        <inlineHelpText>List any additional technologies used alongside Neo4j. Commonly seen technologies, mainly DBs and BI tools.</inlineHelpText>
        <label>Additional 3rd-Party Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cassandra</fullName>
                </value>
                <value>
                    <fullName>Db2</fullName>
                </value>
                <value>
                    <fullName>Elasticsearch</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server</fullName>
                </value>
                <value>
                    <fullName>Microstrategy</fullName>
                </value>
                <value>
                    <fullName>MongoDB</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>PostgreSQL</fullName>
                </value>
                <value>
                    <fullName>PowerBI</fullName>
                </value>
                <value>
                    <fullName>Qlik</fullName>
                </value>
                <value>
                    <fullName>Redis</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Spark</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authentication_Authorization__c</fullName>
        <inlineHelpText>Method of user authentication configured to Neo4j.</inlineHelpText>
        <label>Authentication &amp; Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kerberos</fullName>
                </value>
                <value>
                    <fullName>LDAP/AD</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Native</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avg_of_Props_Node__c</fullName>
        <label>z_Avg # of Props/Node</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_of_Props_Rel__c</fullName>
        <label>z_Avg # of Props/Rel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Strategy_Frequency__c</fullName>
        <inlineHelpText>How is the customer backing up the database and how often?</inlineHelpText>
        <label>Backup Strategy &amp; Frequency</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Build_Config__c</fullName>
        <inlineHelpText>What tools does this customer use to manage configuration and deployment?</inlineHelpText>
        <label>Build &amp; Config</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ansible</fullName>
                </value>
                <value>
                    <fullName>Chef</fullName>
                </value>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>Puppet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMS_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a Cloud Managed Service (CMS) customer?</inlineHelpText>
        <label>CMS Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPP_Status__c</fullName>
        <description>Indicates the status of the Customer Project Profile (CPP). Updated manually by the Customer Success team.</description>
        <label>CPP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>ELA Master</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Part of ELA</fullName>
                </value>
                <value>
                    <fullName>PoC</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPUs__c</fullName>
        <label>CPUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSA_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSA Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CSM stands for Customer Success Manager. Indicate whether a CSM has been assigned to this project by checking this box.</inlineHelpText>
        <label>CSM Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Platform__c</fullName>
        <inlineHelpText>What is the primary Cloud provider (or On Prem)?</inlineHelpText>
        <label>Cloud Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alibaba Cloud</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>On Prem</fullName>
                </value>
                <value>
                    <fullName>OpenStack</fullName>
                </value>
                <value>
                    <fullName>Pivotal Cloud Foundry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dynamic Cloud</fullName>
                    <isActive>false</isActive>
                    <label>Dynamic Cloud</label>
                </value>
                <value>
                    <fullName>SAP</fullName>
                    <isActive>false</isActive>
                    <label>SAP</label>
                </value>
                <value>
                    <fullName>T-Systems</fullName>
                    <isActive>false</isActive>
                    <label>T-Systems</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complex_Query_Filters__c</fullName>
        <inlineHelpText>Does query have more than 3 filters?</inlineHelpText>
        <label>z_Complex Query Filters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complex_Query_Notes__c</fullName>
        <label>z_Complex Query Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Query_Score__c</fullName>
        <label>z_Complex Query Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerSuccessTopAccount__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>This field pulls its data from the master field on the Account object. The master field is manually maintained by Customer Success management to indicate whether the Account has CSM and/or CSA coverage. JIRA: SFDCSPT-502</description>
        <formula>Account_Name__r.Customer_Success_Top_Account__c</formula>
        <inlineHelpText>This field cannot be edited as it pulls its data from the master field by the same name on the Account. The master field is used by the Customer Success Team to indicate whether an Account is covered by a CSM and/or CSA. Changes should only be made by CS management.</inlineHelpText>
        <label>Customer Success Top Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Google_Drive_Location__c</fullName>
        <label>Customer Google Drive Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An abbreviation of Customer Success Manager.</description>
        <inlineHelpText>CSM stands for Customer Success Manager. Select the name of the CSM assigned to this project. 
.</inlineHelpText>
        <label>CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Project_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An abbreviation of Customer Success Architect.</description>
        <inlineHelpText>CSA stands for Customer Success Architect. Select the name of the CSA assigned to this project.</inlineHelpText>
        <label>CSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Project_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Plan__c</fullName>
        <description>URL to customer success plan</description>
        <label>z_Customer Success Plan:</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Trello__c</fullName>
        <description>URL to customer success trello card</description>
        <label>Customer Success Trello:</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Temperature__c</fullName>
        <label>z_Customer Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Multi_DC_required__c</fullName>
        <label>z_DR/Multi-DC required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Mode__c</fullName>
        <label>Deployment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Embedded</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disks__c</fullName>
        <inlineHelpText>Indicate what type of disks are used for production server storage.</inlineHelpText>
        <label>Disks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HDD</fullName>
                </value>
                <value>
                    <fullName>NVMe</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAN</fullName>
                </value>
                <value>
                    <fullName>SSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivers__c</fullName>
        <inlineHelpText>Indicate which driver(s) the customer uses, if any.</inlineHelpText>
        <label>Drivers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Go</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>JavaScript</fullName>
                </value>
                <value>
                    <fullName>JDBC</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>Ruby</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encryption__c</fullName>
        <inlineHelpText>If encryption is in use, how has it been configured?</inlineHelpText>
        <label>Encryption</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Encryption at rest</fullName>
                </value>
                <value>
                    <fullName>Encryption for external connections</fullName>
                </value>
                <value>
                    <fullName>Intra-cluster encryption</fullName>
                </value>
                <value>
                    <fullName>No encryption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_Description__c</fullName>
        <inlineHelpText>Provide a general description of the environment, including topology and technology stack.</inlineHelpText>
        <label>Environment Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Evolving_Schema_Notes__c</fullName>
        <label>z_Evolving Schema Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evolving_Schema_Score__c</fullName>
        <label>z_Evolving Schema Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evolving_Schema__c</fullName>
        <inlineHelpText>What type of methodology are you using for this project? Will the release cycles be more than 3 months?</inlineHelpText>
        <label>z_Evolving Schema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failover_Required__c</fullName>
        <label>z_Failover Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GainsighAccountHealthScore__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>This field is automatically populated by Gainsight. JIRA: SFDCSPT-292</description>
        <inlineHelpText>This field is automatically populated by Gainsight.</inlineHelpText>
        <label>Account Health Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GainsightAccountHealthScoreLabel__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>This field is automatically populated by Gainsight. JIRA: SFDCSPT-292</description>
        <inlineHelpText>This field is automatically populated by Gainsight.</inlineHelpText>
        <label>Account Health Score Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gainsight_Company_ID__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>This field is automatically populated by Gainsight. JIRA: SFDCSPT-287</description>
        <inlineHelpText>This field is automatically populated by Gainsight.</inlineHelpText>
        <label>Gainsight Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <inlineHelpText>If unknown, please input 01/01/1900</inlineHelpText>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instance_Type__c</fullName>
        <inlineHelpText>Example: r5.xlarge or hardware, if On Prem.</inlineHelpText>
        <label>Instance Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instances_in_Production__c</fullName>
        <label>Instances in Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Java_Development_Kit__c</fullName>
        <label>Java Development Kit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon Corretto</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>OpenJDK</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>RedHat OpenJDK</fullName>
                </value>
                <value>
                    <fullName>ZuluJDK</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Java_Version__c</fullName>
        <label>Java Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KICKOFF_CALL_NOTES__c</fullName>
        <description>Migrated from long text to rich text on ~2020-02-03T14:08:15-0800</description>
        <label>Kickoff Call Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Kickoff_Call_Notes_dep__c</fullName>
        <label>KickoffCallNotes(deprecated use newer v)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Meeting_Date__c</fullName>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Neo4j_Visit_Date__c</fullName>
        <label>z_Last Neo4j Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Info__c</fullName>
        <inlineHelpText>Indicate the purpose for which this subscription is licensed.</inlineHelpText>
        <label>License Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <inlineHelpText>How is the customer monitoring their Neo4j environment? What tools are in use?</inlineHelpText>
        <label>Monitoring</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appdynamics</fullName>
                </value>
                <value>
                    <fullName>Cloud Watch</fullName>
                </value>
                <value>
                    <fullName>CSV Metrics</fullName>
                </value>
                <value>
                    <fullName>Datadog</fullName>
                </value>
                <value>
                    <fullName>Grafana</fullName>
                </value>
                <value>
                    <fullName>Graphite</fullName>
                </value>
                <value>
                    <fullName>Halin</fullName>
                </value>
                <value>
                    <fullName>HTTP endpoints</fullName>
                </value>
                <value>
                    <fullName>JMX</fullName>
                </value>
                <value>
                    <fullName>New Relic</fullName>
                </value>
                <value>
                    <fullName>Prometheus</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neo4j_Graph_Expertise__c</fullName>
        <label>z_Neo4j-Graph Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Novice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neo4j_Version__c</fullName>
        <label>Neo4j Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Check_in_Quarter__c</fullName>
        <label>z_Next Check-in Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2019 - Q3</fullName>
                </value>
                <value>
                    <fullName>2019 - Q4</fullName>
                </value>
                <value>
                    <fullName>2020 - Q1</fullName>
                </value>
                <value>
                    <fullName>2020 - Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nodes__c</fullName>
        <label># Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Clusters_in_Production__c</fullName>
        <inlineHelpText>How many clusters exist in the production environment? Typically, there&apos;s one cluster.</inlineHelpText>
        <label># of Clusters in Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Databases__c</fullName>
        <inlineHelpText>How many databases are running in the production environment (1 prior to 4.0)?</inlineHelpText>
        <label># of Databases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Datacenters_Regions__c</fullName>
        <inlineHelpText>Total number of datacenters or regions across which cluster(s) are deployed.</inlineHelpText>
        <label># of Datacenters/Regions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Properties__c</fullName>
        <inlineHelpText>What is the total count of properties in the graph?</inlineHelpText>
        <label># of Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Read_Replicas_in_Production__c</fullName>
        <inlineHelpText>What&apos;s the total number of Replicas deployed in the production environment?</inlineHelpText>
        <label># of Read Replicas in Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon Linux</fullName>
                </value>
                <value>
                    <fullName>CentOS</fullName>
                </value>
                <value>
                    <fullName>Debian</fullName>
                </value>
                <value>
                    <fullName>Red Hat</fullName>
                </value>
                <value>
                    <fullName>SuSE</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Other: Unix/Linux type</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orchestration__c</fullName>
        <inlineHelpText>If the customer has container orchestration, what technology do they use?</inlineHelpText>
        <label>Orchestration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apache Mesos</fullName>
                </value>
                <value>
                    <fullName>Docker</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>Openshift</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peak_Transactions__c</fullName>
        <inlineHelpText>From metrics, usually reported during a Health Check.</inlineHelpText>
        <label>Peak Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>